trunk/Archive2/33/b9d7a48c2d83dc/output
main.cpp: In function 'int main()':
main.cpp:7:22: warning: extended initializer lists only available with -std=c++11 or -std=gnu++11 [enabled by default]
     std::vector<int> v{3, 2, 4, 14, 5, 19};
                      ^
main.cpp:7:42: error: in C++98 'v' must be initialized by constructor, not by '{...}'
     std::vector<int> v{3, 2, 4, 14, 5, 19};
                                          ^
main.cpp:7:42: error: no matching function for call to 'std::vector<int>::vector(<brace-enclosed initializer list>)'
main.cpp:7:42: note: candidates are:
In file included from /usr/include/c++/4.8/vector:64:0,
                 from main.cpp:3:
/usr/include/c++/4.8/bits/stl_vector.h:398:9: note: template<class _InputIterator> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&)
         vector(_InputIterator __first, _InputIterator __last,
         ^
/usr/include/c++/4.8/bits/stl_vector.h:398:9: note:   template argument deduction/substitution failed:
main.cpp:7:42: note:   cannot convert '4' (type 'int') to type 'const allocator_type& {aka const std::allocator<int>&}'
     std::vector<int> v{3, 2, 4, 14, 5, 19};
                                          ^
In file included from /usr/include/c++/4.8/vector:64:0,
                 from main.cpp:3:
/usr/include/c++/4.8/bits/stl_vector.h:310:7: note: std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = int; _Alloc = std::allocator<int>]
       vector(const vector& __x)
       ^
/usr/include/c++/4.8/bits/stl_vector.h:310:7: note:   candidate expects 1 argument, 6 provided
/usr/include/c++/4.8/bits/stl_vector.h:295:7: note: std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>::size_type, const value_type&, const allocator_type&) [with _Tp = int; _Alloc = std::allocator<int>; std::vector<_Tp, _Alloc>::size_type = long unsigned int; std::vector<_Tp, _Alloc>::value_type = int; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<int>]
       vector(size_type __n, const value_type& __value = value_type(),
       ^
/usr/include/c++/4.8/bits/stl_vector.h:295:7: note:   candidate expects 3 arguments, 6 provided
/usr/include/c++/4.8/bits/stl_vector.h:256:7: note: std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = int; _Alloc = std::allocator<int>; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<int>]
       vector(const allocator_type& __a)
       ^
/usr/include/c++/4.8/bits/stl_vector.h:256:7: note:   candidate expects 1 argument, 6 provided
/usr/include/c++/4.8/bits/stl_vector.h:248:7: note: std::vector<_Tp, _Alloc>::vector() [with _Tp = int; _Alloc = std::allocator<int>]
       vector()
       ^
/usr/include/c++/4.8/bits/stl_vector.h:248:7: note:   candidate expects 0 arguments, 6 provided
main.cpp:9:58: error: 'begin' is not a member of 'std'
     std::vector<int>::iterator result = std::min_element(std::begin(v), std::end(v));
                                                          ^
main.cpp:9:73: error: 'end' is not a member of 'std'
     std::vector<int>::iterator result = std::min_element(std::begin(v), std::end(v));
                                                                         ^
main.cpp:10:54: error: 'begin' is not a member of 'std'
     std::cout << "min element at: " << std::distance(std::begin(v), result);
                                                      ^
